tests/neg-custom-args/fatal-warnings/i8427.scala
@SerialVersionUID(1L) // error
trait T

object Test {
  var t: T = compiletime.uninitialized
  def main(args: Array[String]) = println("hi")
}
